updated about me section and fixed spacing on mobile

--- a/style.scss
+++ b/style.scss
@@ -60,7 +60,7 @@ $red-clr: orangered;
 
 .front-page {
   background: #161616;
-  height: 100vh;
+  height: 110vh;
   width: 100%;
   @media screen and (max-height: 768px) {
     // height: 100vh;
@@ -340,9 +340,9 @@ $red-clr: orangered;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  // height: 100vh;
   background-color: $main-bg-color;
   color: white;
+  min-height: 100vh;
 
   .title {
     padding: 1rem;
@@ -512,7 +512,7 @@ $red-clr: orangered;
 // About Me section
 
 .about-me-section {
-  height: 80vh;
+  min-height: 100vh;
   background: $main-bg-color;
   color: #fff;
   display: flex;
@@ -540,7 +540,7 @@ $red-clr: orangered;
 
     p {
       margin-top: 2rem;
-
+      line-height: 1.5;
       .yellow {
         color: $red-clr;
         &:hover {
@@ -892,16 +892,19 @@ $red-clr: orangered;
   }
 
   .about-me-section {
+    min-height: 150vh;
+
     .about-me-container {
       width: 100%;
+      margin: 2rem 0;
     }
   }
 
   .contact-page {
     .contact-container {
+      margin: 3rem 0 2rem 0;
       h1 {
         font-size: 1.5rem;
-        margin-bottom: 0.2rem;
       }
       .form-group {
         .form-element {
@@ -921,8 +924,6 @@ $red-clr: orangered;
 
 @media all and (max-width: 600px) {
   .project-page {
-    height: 180vh;
-
     .project-container {
       display: flex;
       justify-content: center;
